// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

// gRPC interface for a gRPC endpoint component

syntax = "proto3";

package akkajavasdk;

option java_package = "akkajavasdk.protocol";

message In {
  string data = 1;
}

message Out {
  string data = 1;
}

service TestGrpcService {
  rpc Simple(In) returns (Out) {};
  rpc DelegateToAkkaService(In) returns (Out) {};
  rpc DelegateToExternal(In) returns (Out) {};
  rpc AclPublicMethod(In) returns (Out) {};
  rpc AclServiceMethod(In) returns (Out) {};
  rpc AclInheritedDenyCodeMethod(In) returns (Out) {};
  rpc AclOverrideDenyCodeMethod(In) returns (Out) {};
  rpc AclDefaultDenyCodeMethod(In) returns (Out) {};
}
